Fix sticky menu "misbehaviour" on small devices for large menus

--- a/gui/style.css
+++ b/gui/style.css
@@ -586,6 +586,15 @@ a[data-sort=desc]::after {
 }
 
 /**
+ * Mobile
+ */
+@media not screen and (min-width: 48rem) {
+    #menu[data-toggle=open][data-sticky] {
+        position: relative !important;
+    }
+}
+
+/**
  * Desktop
  */
 @media screen and (min-width: 48rem) {
